@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.441 2005/10/26 00:53:23 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.442 2005/10/26 01:42:48 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -14,6 +14,7 @@
   only report progress in 5% increments
   src/GLIArchitectureTemplate.py:
   kernelpkgs.txt support code
+  above disabled because it sucks
 
   24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
